# market_data_api_rust

./: .Cargo.toml.swp  .out.txt.swp  Cargo.toml  out.txt
src/: api_fetch.rs  api_request_handler.rs  lib.rs  request_type.rs
