[package]
name = "market_data_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
mockito = "1.2.0"
reqwest = { version = "0.11.9", features = ["json"]}
serde = "1.0.188"
serde_json = "1.0.107"
tokio = {version = "1.32.0", features = ["full"]}
